<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.torsh.sharedprefgson.MainActivity"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_retrieve_custom_class_file"
        android:textColor="#969494"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <Button
        android:text="@string/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:onClick="saveObjectType"
        android:id="@+id/btnS" />

    <Button
        android:text="@string/buttonLoad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="loadObjectType"
        android:id="@+id/btnL" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_retrieve_generic_type"
        android:textColor="#969494"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/saveG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="saveGenericType"
            android:id="@+id/btnSG" />

        <Button
            android:text="@string/loadG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="loadGenericType"
            android:id="@+id/btnLG" />

        <Button
            android:text="@string/save_list"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="saveEmployeeList"
            android:id="@+id/btnSL" />

        <Button
            android:text="@string/get_list"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="loadEmployeeList"
            android:id="@+id/btnLL" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_data"
        android:textColor="#969494"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        />


</LinearLayout>